# code-europe-assignment

./: README.md  pyproject.toml
.github/workflows/: build.yml
src/: conftest.py  data.py  lr.py
src/test/: test_data.py  test_lr.py
